fix: remove overflow hidden from result to prevent zero clipping

--- a/components/display.css
+++ b/components/display.css
@@ -41,9 +41,7 @@
   text-align: right;
   width: 100%;
   height: 64px;
-  overflow: hidden;
   padding: 0 6px 0 4px;
-  text-ovflow: ellipsis;
   white-space: nowrap;
   box-sizing: border-box;
   flex-shrink: 0;
